# causal-copilot-agent

./: README.md  pyproject.toml  verification_report.md
knowledge/: user_preference.txt
src/causal_copilot_agent/: crew.py  main.py
src/causal_copilot_agent/config/: agents.yaml  tasks.yaml
src/causal_copilot_agent/data/: causal_results.txt
