[project]
name = "causal_copilot_agent"
version = "0.1.0"
description = "causal-copilot-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.118.0,<1.0.0"
]

[project.scripts]
causal_copilot_agent = "causal_copilot_agent.main:run"
run_crew = "causal_copilot_agent.main:run"
train = "causal_copilot_agent.main:train"
replay = "causal_copilot_agent.main:replay"
test = "causal_copilot_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
